# RaindropRmv

./: README.md  requirements.txt
data_generation/glob/: a.out  glob.cpp  path
data_generation/makeRain/: .gitignore  CMakeLists.txt  main.cpp  rain.cpp  rain.h  rain_cfg.json
data_generation/mesh/: CMakeLists.txt  mesh.cpp
data_generation/rainEdge/: CMakeLists.txt  edge.cpp
removal/: ard_cnn.py  test_ardcnn.py  test_combine.py  test_icnn.py  tmp_test.py  train_ardcnn.py  train_combine.py  train_combine_fine.py  train_icnn.py
removal/final/: combine.py  combine_all_trainable.py  data_qian.py  data_ros.py  icnn.py  test_ardcnn.py  test_combine.py  test_icnn.py  tmp_test.py  train_ardcnn.py  train_combine.py  train_combine_fine.py  train_icnn.py
removal/icnn/: data.py  data_qian.py  export.py  fuse.py  icnn.py  test_ardcnn.py  test_icnn.py  testtime.py  train_ardcnn.py  train_combine.py  train_icnn.py
